--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <div class="main">
             <img src="images/image-omelette.jpeg" > 
             <h1>Simple Omelette Recipe</h1>
-            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs<br>
+            <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs
              cooked to perfection, iptionally filled with your choice of cheese,vegetables, or meats.</p>
 
              <div class="PreperationTime">
@@ -21,7 +21,7 @@
                     <li><b>Cooking:</b> 5 minutes</li>
                 </ul>
              </div>
-             <div>
+             <div class="ingredients">
                 <h2>Ingredients</h2>
                 <ul>
                     <li>2-3 large eggs</li>
@@ -32,7 +32,7 @@
                 </ul>
              </div>
              <hr>
-             <div >
+             <div class="instructionsDiv">
                 <h2>Instructions</h2>
                 <ol class="InstructionsStyle">
                     <li><b>Beat the eggs: </b>In a bowl, beat the eggs with a pinch of salt and pepper until they are well mixed. You can add a tablespoon of water or milk for a fluffier texture.</li>
@@ -44,7 +44,7 @@
                 </ol>
              </div>
              <hr>
-             <div>
+             <div class="Nutrition">
                 <h2>Nutrition</h2>
                 <p>The table beloe shows nutritional values per serving without the additional fillings</p>
                 <table>
